docs/dolfin/1.5.0/python/source/programmers-reference/cpp/mesh/index.rst
.. Index file for the dolfin.cpp.mesh module.

.. _programmers_reference_cpp_mesh_index:

dolfin.cpp.mesh module
**********************

Classes:

.. toctree::
    :maxdepth: 1

    BoostGraphOrdering
    BoundaryMesh
    BoundingBoxTree
    BoundingBoxTree3D
    BoxMesh
    Cell
    CellFunction
    CellFunctionBool
    CellFunctionDouble
    CellFunctionInt
    CellFunctionSizet
    CellType
    DomainBoundary
    DynamicMeshEditor
    Edge
    EdgeFunction
    EdgeFunctionBool
    EdgeFunctionDouble
    EdgeFunctionInt
    EdgeFunctionSizet
    Face
    FaceFunction
    FaceFunctionBool
    FaceFunctionDouble
    FaceFunctionInt
    FaceFunctionSizet
    Facet
    FacetCell
    FacetFunction
    FacetFunctionBool
    FacetFunctionDouble
    FacetFunctionInt
    FacetFunctionSizet
    GenericBoundingBoxTree
    Graph
    GraphBuilder
    HierarchicalFunction
    HierarchicalFunctionSpace
    HierarchicalMesh
    HierarchicalMeshFunctionBool
    HierarchicalMeshFunctionDouble
    HierarchicalMeshFunctionInt
    HierarchicalMeshFunctionSizet
    HierarchicalMeshFunctionUInt
    IntervalMesh
    LocalMeshData
    Mesh
    MeshColoring
    MeshConnectivity
    MeshData
    MeshDomains
    MeshEditor
    MeshEntity
    MeshFunction
    MeshFunctionBool
    MeshFunctionDouble
    MeshFunctionInt
    MeshFunctionSizet
    MeshGeometry
    MeshPointIntersection
    MeshQuality
    MeshRenumbering
    MeshTopology
    MeshTransformation
    MeshValueCollection
    MeshValueCollectionBool
    MeshValueCollectionDouble
    MeshValueCollectionInt
    MeshValueCollectionSizet
    MultiMesh
    PeriodicBoundaryComputation
    Point
    RectangleMesh
    Restriction
    SCOTCH
    SubDomain
    SubMesh
    SubsetIterator
    UnitCubeMesh
    UnitIntervalMesh
    UnitSquareMesh
    UnitTetrahedronMesh
    UnitTriangleMesh
    Vertex
    VertexFunction
    VertexFunctionBool
    VertexFunctionDouble
    VertexFunctionInt
    VertexFunctionSizet
    cells
    edges
    entities
    faces
    facets
    vertices

Functions:

.. toctree::
    :maxdepth: 1

    BoostGraphOrdering_compute_cuthill_mckee
    CellType_create
    CellType_string2type
    CellType_type2string
    GraphBuilder_compute_dual_graph
    GraphBuilder_local_graph
    MeshColoring_cell_colors
    MeshColoring_color
    MeshColoring_color_cells
    MeshColoring_compute_colors
    MeshColoring_type_to_dim
    MeshQuality_radius_ratio_histogram_data
    MeshQuality_radius_ratio_matplotlib_histogram
    MeshQuality_radius_ratio_min_max
    MeshQuality_radius_ratios
    MeshTransformation_rotate
    MeshTransformation_translate
    MultiMesh_default_parameters
    PeriodicBoundaryComputation_compute_periodic_pairs
    PeriodicBoundaryComputation_masters_slaves
    SCOTCH_compute_gps
    SCOTCH_compute_partition
    intersect
    refine

Module docstring:

.. automodule:: dolfin.cpp.mesh
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: